# isogeo-api-py-minsdk

./: .coveragerc  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pypirc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  MANIFEST  MANIFEST.in  Pipfile  README.md  README.rst  azure-pipelines.yml  build_upload.ps1  build_upload_memo.ps1  codecov.yml  isogeo_md_preprocessor.py  isogeo_params_TPL.ini  isogeo_sdk.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_coverage.ps1  tool_build_upload.ps1  tool_docs_build.ps1  tool_test_coverage.ps1  tox.ini
.github/: dependabot.yml  labeler.yml
docs/: Makefile  api_coverage_features.rst  authentication.md  build_docs.ps1  conf.py  index.rst  installation.md  installation.rst  requirements_docs.txt  sample_access_token.json  usage.md  usage.rst
docs/libs/: MarkupSafe-1.0-cp36-cp36m-win_amd64.whl  PyYAML-3.12-cp36-cp36m-win_amd64.whl  README.rst
isogeo_pysdk/: __about__.py  __init__.py  api_hooks.py  checker.py  decorators.py  exceptions.py  isogeo.py  isogeo_params_TPL.ini  isogeo_sdk.py  isogeo_sdk_oauth.py  tags.py  translator.py  type_hints_custom.py  utils.py
isogeo_pysdk/api/: __init__.py  routes_about.py  routes_account.py  routes_application.py  routes_catalog.py  routes_condition.py  routes_conformity.py  routes_contact.py  routes_coordinate_systems.py  routes_datasource.py  routes_directives.py  routes_event.py  routes_feature_attributes.py  routes_format.py  routes_invitation.py  routes_keyword.py  routes_license.py  routes_limitation.py  routes_link.py  routes_metadata.py  routes_metadata_bulk.py  routes_resource.py  routes_search.py  routes_service.py  routes_service_layers.py  routes_service_operations.py  routes_share.py  routes_specification.py  routes_thesaurus.py  routes_user.py  routes_workgroup.py
isogeo_pysdk/enums/: __init__.py  application_kinds.py  application_types.py  bulk_ignore_reasons.py  catalog_statistics_tags.py  contact_roles.py  (+16 more)
samples/: isogeo_preprocessor.py  latest_md_modified.py
tests/: requirements_test.txt  test_about.py  test_account.py  test_applications.py  test_authentication.py  test_build_travis.py  test_bulks.py  test_catalogs.py  test_checker.py  test_conditions.py  test_conformity.py  test_contacts.py  test_coordinate_systems.py  test_datasources.py  test_directives.py  test_download_hosted.py  test_enums.py  test_events.py  test_export_XML19139.py  test_feature_attributes.py  test_formats.py  test_keywords.py  test_keywords_complete.py  test_licenses.py  test_limitations.py  test_links.py  test_metadata.py  test_metadata_models.py  test_metadatas.py  test_metadatas_noGeo.py  test_metadatas_vector.py  test_platform_mailchimp.py  test_resource.py  test_routes.py  test_search.py  test_service_layers.py  test_service_operations.py  test_share.py  test_shares.py  test_specifications.py  (+11 more)
tools/: tool_build_upload.ps1  tool_docs_build.ps1  tool_test_coverage.ps1
(+91 files in other folders)
