[bdist_wheel]
universal = 0

[flake8]
ignore = E203 W503

[metadata]
description-file = README.md

[tool:pytest]
addopts = --junitxml=junit/test-results.xml --cov-config=.coveragerc --cov=isogeo_pysdk --cov-report=xml --cov-report=html --cov-append tests/ --ignore=tests/_wip/
minversion = 3.2
norecursedirs = .* build dev development dist docs CVS fixtures _darcs {arch} *.egg venv _wip
testpaths = tests
